# pinterest_parser

./: .gitignore  README.md  config.json  main.py  pyproject.toml
