[tool.poetry]
name = "pinterest-parser"
version = "0.1.0"
description = ""
authors = ["Svetlana <svet.karimova2012@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "4.15.2"
urllib3 = "2.0.7"
tqdm = "^4.66.4"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
